--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -19,9 +19,12 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.3.0",
-    "react-native-ui-lib": "^7.12.0"
+    "react-native-ui-lib": "^7.12.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
