--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -14,14 +14,20 @@
     "@react-navigation/stack": "^6.3.20",
     "@tanstack/react-query": "^5.12.2",
     "axios": "^1.6.2",
+    "core-js": "^3.34.0",
     "expo": "~49.0.15",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.3.0",
-    "react-native-ui-lib": "^7.12.0"
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-toast-message": "^2.1.8",
+    "react-native-ui-lib": "^7.12.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
