--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -21,15 +22,13 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animated-nav-tab-bar": "^3.1.10",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.3.0",
-<<<<<<< HEAD
     "react-native-safe-area-context": "^4.8.0",
     "react-native-toast-message": "^2.1.8",
-=======
->>>>>>> nora-wishlist
     "react-native-ui-lib": "^7.12.0",
     "react-native-vector-icons": "^10.0.2"
   },
