--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -22,11 +22,11 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-animated-nav-tab-bar": "^3.1.10",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.11.3",
-    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
