--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "^4.8.0",
+    "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
     "react-native-vector-icons": "^10.0.2"
