--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-webview": "^13.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
