--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -27,7 +28,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.11.3",
-    "react-native-safe-area-context": "^4.8.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
