--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -31,7 +31,11 @@
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0",
+    "expo-constants": "~14.4.2",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
