--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -17,8 +17,12 @@
     "axios": "^1.6.2",
     "core-js": "^3.34.0",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
+    "expo-notifications": "~0.20.1",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -26,16 +30,13 @@
     "react-native-animated-nav-tab-bar": "^3.1.10",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
-    "react-native-vector-icons": "^10.0.2",
-    "expo-notifications": "~0.20.1",
-    "expo-device": "~5.4.0",
-    "expo-constants": "~14.4.2",
-    "expo-updates": "~0.18.17"
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
