--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -16,10 +16,10 @@
     "@tanstack/react-query": "^5.12.2",
     "axios": "^1.6.2",
     "core-js": "^3.34.0",
-    "expo": "~49.0.15",
+    "expo": "^49.0.21",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
-    "expo-notifications": "~0.20.1",
+    "expo-notifications": "^0.23.0",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
