--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -27,15 +27,18 @@
     "react-native-animated-nav-tab-bar": "^3.1.10",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-toast-message": "^2.1.8",
     "react-native-ui-lib": "^7.12.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-webview": "^13.6.3"
+    "react-native-webview": "^13.6.3",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
