--- a/wishlistr/package.json
+++ b/wishlistr/package.json
@@ -19,6 +19,7 @@
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
+    "expo-linear-gradient": "^12.5.0",
     "expo-notifications": "~0.20.1",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
